--- a/package.json
+++ b/package.json
@@ -10,21 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/drawer": "^6.4.3",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@react-navigation/stack": "^6.2.2",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.3",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.2",
-    "react-native-web": "0.17.1",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
