--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rncourse",
   "version": "1.0.0",
-  "main": "./bottom-tabs-navigator/App",
+  "main": "./meals-app/App",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,7 +14,6 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
-    "@react-navigation/stack": "^6.3.2",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
