--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-    "name": "rncourse",
-    "version": "1.0.0",
-    "main": "./first-app/App",
-    "scripts": {
-      "start": "expo start",
-      "android": "expo start --android",
-      "ios": "expo start --ios",
-      "web": "expo start --web",
-      "eject": "expo eject"
-    },
-    "dependencies": {
-      "@react-native-async-storage/async-storage": "^1.17.11",
-      "@react-navigation/native": "^6.0.8",
-      "@react-navigation/native-stack": "^6.5.0",
-      "axios": "^0.26.0",
-      "expo": "~44.0.0",
-      "expo-status-bar": "~1.2.0",
-      "react": "17.0.1",
-      "react-dom": "17.0.1",
-      "react-native": "0.64.3",
-      "react-native-safe-area-context": "3.3.2",
-      "react-native-screens": "~3.10.1",
-      "react-native-web": "0.17.1",
-      "expo-app-loading": "~1.3.0"
-    },
+  "name": "rncourse",
+  "version": "1.0.0",
+  "main": "./first-app/App",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-web": "0.17.1",
+    "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
+    "react-native-maps": "0.29.4",
+    "expo-sqlite": "~10.1.0",
+    "expo-app-loading": "~1.3.0",
+    "react-native-safe-area-context":"3.3.2",
+    "react-native-screens":"~3.10.1"
+  },
     "devDependencies": {
       "@babel/core": "^7.12.9",
       "@types/react": "~18.0.0",
