--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     ],
     "ios": {
       "buildNumber": "1.0.0",
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.globant.myrecipesbook"
     },
     "android": {
       "versionCode": 1,
