--- a/eas.json
+++ b/eas.json
@@ -11,9 +11,14 @@
             "android" : {
                 "buildType": "apk"
             },
+            "ios": {
+                "simulator": true
+            },
             "distribution": "internal"
         },
-        "production": {}
+        "production": {
+            "credentialsSource": "local"
+        }
     },
     "submit": {
         "production": {}
